--- a/src/LOCALES/en.json
+++ b/src/LOCALES/en.json
@@ -1,17 +1,24 @@
 {
-    "title": "AGROSYSTEM - Home",
-    "welcome": "Welcome",
-    "profile": "My Profile",
-    "logout": "Logout",
-    "animal": "Animal",
-    "medicamento": "Medicine",
-    "tarjeta": "Health Card",
-    "reporte": "Medical Report",
-    "tratamiento": "Treatment",
-    "enfermedad": "Disease",
-    "estadisticas_title": "Most Frequent Diseases",
-    "nombre_enfermedad": "Disease Name",
-    "casos": "Cases",
-    "agregar": "Add"
+    "titulo.home": "AGROSYSTEM - Home",
+    "brand.name": "AGROSYSTEM",
+    "logo.alt": "Agrosystem Logo",
+    "texto.bienvenido": "Welcome, Juan!",
+    "btn.miPerfil": "My Profile",
+    "menu.animal": "Animal",
+    "menu.medicamento": "Medicine",
+    "menu.tarjeta": "Health card",
+    "menu.reporte": "Medical report",
+    "menu.tratamiento": "Treatment",
+    "menu.enfermedad": "Disease",
+    "btn.cerrarSesion": "Log out",
+    "titulo.enfermedades": "Most frequent diseases",
+    "placeholder.nombre": "Disease name",
+    "placeholder.casos": "Cases",
+    "btn.agregar": "Add",
+    "modal.titulo": "Log out",
+    "modal.mensaje": "Are you sure you want to log out?",
+    "modal.submensaje": "Your session will be closed and you will need to log in again.",
+    "btn.cancelar": "Cancel",
+    "btn.cerrarSesionModal": "Log out"
   }
   
