--- a/src/LOCALES/es.json
+++ b/src/LOCALES/es.json
@@ -1,17 +1,24 @@
 {
-    "title": "AGROSYSTEM - Inicio",
-    "welcome": "Bienvenido",
-    "profile": "Mi Perfil",
-    "logout": "Cerrar Sesión",
-    "animal": "Animal",
-    "medicamento": "Medicamento",
-    "tarjeta": "Tarjeta de salud",
-    "reporte": "Reporte médico",
-    "tratamiento": "Tratamiento",
-    "enfermedad": "Enfermedad",
-    "estadisticas_title": "Enfermedades más frecuentes",
-    "nombre_enfermedad": "Nombre enfermedad",
-    "casos": "Casos",
-    "agregar": "Agregar"
+    "titulo.home": "AGROSYSTEM - Home",
+    "brand.name": "AGROSYSTEM",
+    "logo.alt": "Logo Agrosystem",
+    "texto.bienvenido": "Bienvenido, Juan!",
+    "btn.miPerfil": "Mi Perfil",
+    "menu.animal": "Animal",
+    "menu.medicamento": "Medicamento",
+    "menu.tarjeta": "Tarjeta de salud",
+    "menu.reporte": "Reporte médico",
+    "menu.tratamiento": "Tratamiento",
+    "menu.enfermedad": "Enfermedad",
+    "btn.cerrarSesion": "Cerrar Sesión",
+    "titulo.enfermedades": "Enfermedades más frecuentes",
+    "placeholder.nombre": "Nombre enfermedad",
+    "placeholder.casos": "Casos",
+    "btn.agregar": "Agregar",
+    "modal.titulo": "Cerrar Sesión",
+    "modal.mensaje": "¿Estás seguro de que deseas cerrar sesión?",
+    "modal.submensaje": "Se cerrará tu sesión actual y deberás iniciar sesión nuevamente.",
+    "btn.cancelar": "Cancelar",
+    "btn.cerrarSesionModal": "Cerrar Sesión"
   }
   
